--- a/IPL Cricinfo.ipynb
+++ b/IPL Cricinfo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hi. In this project, I'm going to analyze IPL Data to find out the most valuable players for fantasy cricket competitions. For this, I have used the points system as specified by the popular fantasy platform 'Dream 11'.\n",
+    "Hell!. In this project, I'm going to analyze IPL Data to find out the most valuable players for fantasy cricket competitions. For this, I have used the points system as used by some of the popular fantasy platforms.\n",
     "\n",
     "Note: The points calculated aren't exactly correct as I have not included points from Run Outs, and Economy+Strike Rates for particular innings, as that would require innings-by-innings data. The latter part is negligible anyways and the run-out points would create at most a difference of 1-2 points per match for good fielders. All major criterias have been taken into account so overall you can consider this a pretty accurate analysis."
    ]
